syntax = "proto3";

package greet;

// Unary API
message Greeting {
	string first_name = 1;
	string last_name = 2;
}

message GreetingRequest {
	Greeting greeting_uny = 1;
}

message GreetingResponse {
	string result = 1;
}

// Server Stream API
message GreetingManyTimesRequest {
	Greeting greeting_many = 1;
}

message GreetingManyTimesReponse {
	string result = 1;
}

// Client Stream API
message LongGreetingRequest {
	Greeting long_greeting = 1;
}

message LongGreetingResponse {
	string resut = 1;
}

service GreetingService {
	// Unary
	rpc Greet (GreetingRequest) returns (GreetingResponse) {}
	
	// Server streaming
	rpc GreetManyTimes (GreetingManyTimesRequest) returns (stream GreetingManyTimesReponse) {}

	// Client streaming
	rpc LongGreet (stream LongGreetingRequest) returns (LongGreetingResponse) {}
}

